--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <!-- font awesome and google fonts -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <script defer src="script.js"></script>
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <title>LinguaQuiz</title>
 </head>
 
 <body>
@@ -20,9 +20,6 @@
         LinguaQuiz: Elevate Your English
     </h1>
 
-    <div class="game-area">
-
-    </div>
     <div class="container">
         <div id="question-container" class="hide">
             <div id="question">Question</div>
