add game variables

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     </h1>
 
     <!-- Main screen of game and name input -->
-    <div class="btn-1" id="login-screen">
+    <div class="user-input" id="login-screen">
 
-        <div class="user-input">
+        <div>
             <label for="user">Please enter your name</label>
             <br>
             <input type="text" id="user" name="user" maxlength=12>
@@ -37,7 +37,7 @@
     </div>
 
     <!-- Page offering different English levels -->
-    <div id="choose-level-screen">
+    <div class="user-input" id="choose-level-screen">
         <h3>Choose your level</h3>
         <div id="level-buttons">
             <!-- Buttons to select game level -->
