--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </h1>
 
     <!-- Main screen of game and name input -->
-    <div class="user-input" id="login-screen">
+    <div class="user-input1" id="login-screen">
 
         <div>
             <label for="user">
@@ -38,7 +38,7 @@
     </div>
 
     <!-- Page offering different English levels -->
-    <div class="user-input" id="choose-level-screen">
+    <div class="user-input2" id="choose-level-screen">
         <h3>Choose your level</h3>
         <p>${user-name}, click on one! </p>
         <div id="level-buttons">
