--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </h1>
 
     <!-- Main screen of game and name input -->
-    <div class="user-input1" id="login-screen">
+    <div class="user-input1" id="mainLoginScreen">
 
         <div>
             <label for="user">
@@ -33,7 +33,7 @@
         <button class="button" id="user-log">Let's Practice!</button>
 
         <p class="user-log-error" id="error-message">
-            Please try again. <br>Username must be at least 12 characters.
+            Please try again. <br>Username must be at least 4 characters.
         </p>
     </div>
 
