update to functions for handleButton and shuffledQuestions

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 type="button">Beginner</button>
             <button data-type="intermediate" id="intermediate-btn" class="button button-level btn-2"
                 type="button">Intermediate</button>
-            <button data-type="difficult" id="advanced-btn" class="button button-level btn-2"
+            <button data-type="advanced" id="advanced-btn" class="button button-level btn-2"
                 type="button">Advanced</button>
         </div>
     </div>
