--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
     </div>
 
-    <div class="container">
+    <div id="question-box" class="container">
         <div id="question-container" class="hide">
             <div id="question">Question</div>
             <div id="answer-buttons" class="btn-grid">
