change of functions for smoother running

--- a/index.html
+++ b/index.html
@@ -43,12 +43,10 @@
         <p>${user-name}, click on one! </p>
         <div id="level-buttons">
             <!-- Buttons to select game level -->
-            <button data-type="beginner" id="beginner-btn" class="button button-level btn-2"
-                type="button">Beginner</button>
-            <button data-type="intermediate" id="intermediate-btn" class="button button-level btn-2"
+            <button data-type="beginner" id="beginner-btn" class="button-level" type="button">Beginner</button>
+            <button data-type="intermediate" id="intermediate-btn" class="button-level"
                 type="button">Intermediate</button>
-            <button data-type="advanced" id="advanced-btn" class="button button-level btn-2"
-                type="button">Advanced</button>
+            <button data-type="advanced" id="advanced-btn" class="button-level" type="button">Advanced</button>
         </div>
     </div>
 
