added scores message

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div>
         </div>
         <div class="controls">
-            <button id="start-btn" class="start-btn btn">Start</button>
+            <button id="start-btn" class="start-btn btn">Restart</button>
             <button id="next-btn" class="next-btn btn hide">Next</button>
         </div>
     </div>
@@ -69,6 +69,11 @@
     <div class="score-area">
         <p class="scores">Correct Answers <span id="score">0</span></p>
         <p class="scores">Incorrect Answers <span id="incorrect">0</span></p>
+    </div>
+
+    <div id="score-message" class="score-message-hide">
+        <h2>Well Done!</h2>
+        <p>Your score is <span id="score"></span>.</p>
     </div>
 
     <footer class="footer">
