--- a/index.html
+++ b/index.html
@@ -70,10 +70,11 @@
         <p class="scores">Correct Answers <span id="score">0</span></p>
         <p class="scores">Incorrect Answers <span id="incorrect">0</span></p>
     </div>
-
-    <div id="score-message" class="score-message-hide">
+<div class = "container">
+    <div id="score-message" class="hide">
         <h2>Well Done!</h2>
         <p>Your score is <span id="score"></span>.</p>
+    </div>
     </div>
 
     <footer class="footer">
