update score screen

--- a/index.html
+++ b/index.html
@@ -66,19 +66,27 @@
         </div>
     </div>
 
-    <div class="score-area">
+    <div id="score-area" class="score-area">
         <p class="scores">Correct Answers <span id="score">0</span></p>
         <p class="scores">Incorrect Answers <span id="incorrect">0</span></p>
     </div>
-<div class = "container">
-    <div id="score-message" class="hide">
-        <h2>Well Done!</h2>
-        <p>Your score is <span id="score"></span>.</p>
+    <div>
+        <div id="score-message" class="hide">
+            <h2>Well Done!</h2>
+            <p>Your score is <span id="final-score"></span>.</p>
+        </div>
     </div>
-    </div>
-
+    
     <footer class="footer">
-        <div class="container">
+        <div class="footer-left">
+            <a href="https://github.com/kelllyy101" target="_blank">
+                <img src="assets/images/25231.png" alt="GitHub Icon">
+            </a>
+        </div>
+        <div class="footer-right">
+            <p>Created by <a href="https://github.com/kelllyy101" target="_blank">kelllyy101</a></p>
+        </div>
+        <div>
             <p>&copy; 2023 LinguaQuiz. All rights reserved.</p>
         </div>
     </footer>
