updated function for correct answers

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
     </div>
     <div>
         <div id="score-message" class="hide">
-            <h2>Well Done!</h2>
-            <p>Your score is <span id="final-score"></span>.</p>
+            <h2>Well Done For Completing This Quiz!</h2>
+            <h3>Your score is <span id="final-score"></span> out of 10.</h3>
         </div>
     </div>
     
