--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>LinguaQuiz</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 </head>
 
 <body>
@@ -76,7 +79,7 @@
             <h3>Your score is <span id="final-score"></span> out of 10.</h3>
         </div>
     </div>
-    
+
     <footer class="footer">
         <div class="footer-left">
             <a href="https://github.com/kelllyy101" target="_blank">
