work on function

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!-- Page offering different English levels -->
     <div class="user-input2" id="choose-level-screen">
         <h3>Choose your level</h3>
-        <p>${user-name}, click on one! </p>
+        <p>${username}, click on one! </p>
         <div id="level-buttons">
             <!-- Buttons to select game level -->
             <button data-type="beginner" id="beginner-btn" class="button-level" type="button">Beginner</button>
