fixed username input error

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!-- Page offering different English levels -->
     <div class="user-input2" id="choose-level-screen">
         <h3>Choose your level</h3>
-        <p>${username}, click on one! </p>
+        <p id="username">${username}, </p>
         <div id="level-buttons">
             <!-- Buttons to select game level -->
             <button data-type="beginner" id="beginner-btn" class="button-level" type="button">Beginner</button>
@@ -62,8 +62,8 @@
             </div>
         </div>
         <div class="controls">
-            <button id="start-btn" class="start-btn btn">Restart</button>
-            <button id="next-btn" class="next-btn btn hide">Next</button>
+            <button id="start-btn" class="start-btn">Restart</button>
+            <button id="next-btn" class="next-btn">Next</button>
         </div>
     </div>
 
