improved stying of buttons

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                 <h3>Please enter your name</h3>
             </label>
             <br>
-            <input type="text" id="user" name="user" maxlength=12>
+            <input type="text" id="user" name="user" class="username-input" maxlength=12>
         </div>
 
-        <button class="button" id="user-log">Let's Practice!</button>
+        <button class="button-level" id="user-log">Let's Practice!</button>
 
         <p class="user-log-error" id="error-message">
             Please try again. <br>Username must be at least 1 characters.
