--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
                 <h3>Please enter your name</h3>
             </label>
             <br>
-            <input type="text" id="user" name="user" class="username-input" maxlength=12>
+            <input type="text" id="user" name="user" class="username-input" maxlength=12 autofocus="autofocus">
         </div>
 
         <button class="button-level" id="user-log">Let's Practice!</button>
 
         <p class="user-log-error" id="error-message">
-            Please try again. <br>Username must be at least 1 characters.
+            Please try again. <br>Username must be at least 1 character.
         </p>
     </div>
 
