--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Learn English, English Quiz, Test your knowledge, Beginners English, Intermediate English and Avanced" />
+    <meta name="keywords"
+        content="Learn English, English Quiz, Test your knowledge, Beginners English, Intermediate English and Avanced" />
     <!-- font awesome and google fonts -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
@@ -54,6 +55,11 @@
     <div id="question-box" class="container">
         <div id="question-container" class="hide">
             <div id="question">Question</div>
+            <div id="timer-container">
+                <div id="timer"><img src="assets/images/timericon.webp" alt="Timer" width="20px" />
+                    <span class="time-left">10s</span>
+                </div>
+            </div>
             <div id="answer-buttons" class="btn-grid">
                 <button class="btn">Answer 1</button>
                 <button class="btn">Answer 2</button>
