--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
     <div class="user-input1" id="mainLoginScreen">
 
         <div>
-            <label for="user">
-                <h3>Please enter your name</h3>
-            </label>
+                <p>Please enter your name<p>
             <br>
             <input type="text" id="user" name="user" class="username-input" maxlength=12 autofocus="autofocus">
         </div>
@@ -56,7 +54,7 @@
         <div id="question-container" class="hide">
             <div id="question">Question</div>
             <div id="timer-container">
-                <div id="timer"><img src="assets/images/timericon.webp" alt="Timer" width="20px" />
+                <div id="timer"><img src="assets/images/timericon.webp" alt="Timer" width="20" />
                     <span class="time-left">10s</span>
                 </div>
             </div>
