add contact form

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="contact" href="form.html">
     <title>LinguaQuiz</title>
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
 </head>
@@ -75,12 +76,15 @@
     </div>
     <footer class="footer">
         <div class="footer-left">
-            <a href="https://github.com/kelllyy101" target="_blank">
-                <img src="assets/images/25231.png" alt="GitHub Icon">
+            <a href="https://github.com/kelllyy101" class="footer-link" target="_blank">
+                <img class="github-img" src="assets/images/25231.png" alt="GitHub Icon">
             </a>
         </div>
+        <div>
+            <a class="footer-link" href="form.html">Contact Us</a>
+        </div>
         <div class="footer-right">
-            <p>Created by <a href="https://github.com/kelllyy101" target="_blank">kelllyy101</a></p>
+            <p>Created by <a href="https://github.com/kelllyy101" class="footer-link" target="_blank">kelllyy101</a></p>
         </div>
         <div>
             <p>&copy; 2023 LinguaQuiz. All rights reserved.</p>
