--- a/form.html
+++ b/form.html
@@ -23,7 +23,7 @@
             <input type="email" id="email" name="email" required>
 
             <label for="message">Message:</label>
-            <textarea id="message" name="message" required></textarea>
+            <textarea id="message" name="message" placeholder="Leave a message about LinguaQuiz!" required></textarea>
 
             <input type="submit" value="Submit">
         </form>
