--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,6 +15,7 @@
     <title>LinguaQuiz</title>
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
 </head>
+
 <body>
     <h1 class="heading">
         <img class="logo" src="assets/images/logo-for-the-language-of-tourism-vector-10776661.webp" alt="logo">
@@ -23,9 +25,11 @@
     <div class="user-input1" id="mainLoginScreen">
 
         <div>
-                <p>Please enter your name<p>
-            <br>
-            <input type="text" id="user" name="user" class="username-input" maxlength=12 autofocus="autofocus">
+            <p>Please enter your name
+            <p>
+                <br>
+                <label><input type="text" id="user" name="user" class="username-input" maxlength=12
+                        autofocus="autofocus"></label>
         </div>
         <button class="button-level" id="user-log">Let's Practice!</button>
         <p class="user-log-error" id="error-message">
@@ -95,4 +99,5 @@
     </noscript>
     <script src="assets/js/script.js"></script>
 </body>
+
 </html>
