--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <h1 class="heading">
         <img class="logo" src="assets/images/logo-for-the-language-of-tourism-vector-10776661.webp" alt="logo">
-        LinguaQuiz: <br>Elevate Your English
+        LinguaQuiz: <br>Elevate Your Spanish
     </h1>
     <!-- Main screen of game and name input -->
     <div class="user-input1" id="mainLoginScreen">
