--- a/form.html
+++ b/form.html
@@ -11,7 +11,7 @@
 <body>
     <h1 class="heading">
         <img class="logo" src="assets/images/logo-for-the-language-of-tourism-vector-10776661.webp" alt="logo">
-        LinguaQuiz: <br>Elevate Your English
+        LinguaQuiz: <br>Elevate Your Spanish
     </h1>
     <div id="contact-form">
         <h3>Contact Us</h3>
